# R-D_RAG_Special_Agents

./: LICENSE
ragx/: README.md  pyproject.toml
ragx/examples/: evaluate.py
ragx/ragx/: __init__.py  _compat.py  chunking.py  config.py  embeddings.py  models.py  packing.py
ragx/ragx/api/: __init__.py  public_api.py
ragx/ragx/control/: __init__.py  budget.py  crag.py  planner.py  selfrag.py
ragx/ragx/generation/: __init__.py  critic.py  generator.py
ragx/ragx/index/: __init__.py  dynamic.py  pii.py
ragx/ragx/mcp/: __init__.py  registry.py
ragx/ragx/rerank/: __init__.py  monot5.py  tildev2.py
ragx/ragx/retrievers/: __init__.py  graphrag_adapter.py  hybrid.py  tensor_iface.py
ragx/ragx/summarize/: __init__.py  longllmlingua.py  recomp.py
ragx/tests/: test_agentic.py  test_budget.py  test_crag_selfrag.py  test_retrieval.py
