[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragx"
version = "0.1.0"
description = "R&D RAG system with specialist agents"
requires-python = ">=3.11"
authors = [
    {name = "RAGX Team", email = "team@example.com"}
]
readme = "README.md"
dependencies = [
    "pydantic>=2.4",
    "numpy>=1.26",
    "networkx>=3.1",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "rich>=13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4"
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["ragx"]
